avancement (boucle infini à reglé